# markov-danaher-quotes

./: .gitignore  Cargo.toml  README.md  calculateMetadata.js  cleanDanaherPosts.txt  cleanText.js  constants.js  danaherPosts.txt  generateMarkov.js  generateMarkov2.js  generateMetadata.js  generateQuote.js  index.html  input.txt  markov1.json  markov1.txt  markovMetadata.json  postTexts.txt  scraping.js
client/: app.js  index.html  style.css
generate-markov/: Cargo.toml
generate-markov/src/: main.rs  markov.rs  metadata.rs
generate-quote/: Cargo.toml
generate-quote-lambda/: Cargo.toml
generate-quote-lambda/src/: main.rs
generate-quote/src/: main.rs  quote.rs
js/: generateMarkov.js  generateQuote.js
jsResources/: markovMetadata.json
rs/: Cargo.toml
rs/benches/: markov.rs
rs/src/: lib.rs
rsResources/: markov1  markovMetadata
scripts/: .gitignore  cleanText.js  generateMarkov.js
website/: index.html
website/client/: app.js
