[package]
name = "generate-quote-lambda"
version = "0.1.0"
authors = ["Spencer Whitehead <SpencerWhitehead7@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "0.4.1"
log = "0.4.14"
lazy_static = "1.4.0"
rand = "0.8.4"
serde = "1.0.130"
serde_cbor = "0.11.2"
simple_logger = "1.15.0"
tokio = "1.14.0"