[package]
name = "markov-danaher-quotes"
version = "0.1.0"
authors = ["Spencer Whitehead <SpencerWhitehead7@gmail.com>"]
edition = "2021"
license = "Unlicense"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ciborium = "0.2.1"
rand = "0.8.5"
serde = "1.0.193"
serde_derive = "1.0.193"
