[package]
name = "markov-danaher-quotes"
version = "0.1.0"
authors = ["Spencer Whitehead <SpencerWhitehead7@gmail.com>"]
edition = "2024"
license = "Unlicense"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ciborium = "0.2.2"
lambda_runtime = "1.0.1"
lazy_static = "1.5.0"
rand = "0.9.2"
serde = "1.0.228"
tokio = "1.48.0"
